<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_user">

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.pmdm_p09_android3.ui.home.UserFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_test"
        android:name="com.example.pmdm_p09_android3.ui.dashboard.TestFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.example.pmdm_p09_android3.ui.notifications.ResultsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_results" />
</navigation>