<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/esa_blue"
        android:backgroundTint="@color/esa_blue"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="56dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:foregroundTint="@color/white"
            android:text="@string/text_sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/textSignupUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:foregroundTint="@color/white"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <EditText
            android:id="@+id/textSignupPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:foregroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <EditText
            android:id="@+id/textSignupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:foregroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignupSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/esa_blue_light"
                android:backgroundTint="@color/esa_blue_light"
                android:foregroundTint="@color/esa_blue"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/btnSignupCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/esa_blue_light"
                android:backgroundTint="@color/esa_blue_light"
                android:foregroundTint="@color/esa_blue"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>