<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/esa_blue"
        android:backgroundTint="@color/esa_blue"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/educodea_logo" />

            <EditText
                android:id="@+id/textEmailuser"
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:foregroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white" />

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/esa_blue_light"
                    android:backgroundTint="@color/esa_blue_light"
                    android:foregroundTint="@color/esa_blue"
                    android:text="@string/log_in"
                    app:iconTint="@color/esa_blue" />

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/esa_blue_light"
                    android:backgroundTint="@color/esa_blue_light"
                    android:foregroundTint="@color/esa_blue"
                    android:text="@string/sign_up" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>